applications/rustfs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs-ui-ingress
  namespace: rustfs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: rustfs.helical.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-helm-svc
                port:
                  number: 9001
